# qt

./: CMakeLists.txt  GreyButton.qml  Main.qml  MyButton.qml  add.js  drawtest.qrc  main.cpp  message.h  myDatetime.h  renderarea.cpp  renderarea.h  window.cpp  window.h
